Added all gallery images

--- a/site/index.html
+++ b/site/index.html
@@ -438,87 +438,57 @@ id="collection-5b92f28d0e2e72baf566193b">
 
   <div id="canvasWrapper">
     <div id="canvas">
-
       <div id="mobileNav">
         <div class="wrapper">
           <nav class="main-nav mobile-nav">
             <ul>
-
               <li class="mobile-folder">
                 <a href="/folderux">UX</a>
                 <ul>
-
                   <li class="page-collection">
-
+                    <a href="/ur-eats">UR Eats</a>
+                  </li>
+                  <li class="page-collection">
+                    <a href="/blackboard">Blackboard</a>
+                  </li>
+                  <li class="page-collection">
                     <a href="/creativity-project">Creativity Project</a>
-
                   </li>
-
                   <li class="page-collection">
-
                     <a href="/expo">Brooklyn Craft Expo</a>
-
                   </li>
-
-                  <li class="page-collection">
-
-                    <a href="/barter-out">Barter Out</a>
-
-                  </li>
-
                 </ul>
               </li>
-
               <li class="mobile-folder">
                 <a href="/art-1">ART</a>
                 <ul>
-
                   <li class="gallery-collection">
-
                     <a href="/gallery">Gallery</a>
-
                   </li>
-
                   <li class="page-collection">
-
                     <a href="/video">Sound & Video</a>
-
                   </li>
-
                 </ul>
               </li>
-
             </ul>
           </nav>
           <nav class="main-nav mobile-nav">
             <ul>
-
               <li class="page-collection">
-
                 <a href="/about-me">About Me</a>
-
               </li>
-
               <li class="page-collection">
-
                 <a href="/resume-1">Resume</a>
-
               </li>
-
               <li class="page-collection">
-
                 <a href="/contact">Contact</a>
-
               </li>
-
             </ul>
           </nav>
         </div>
       </div>
-
       <div id="headerWrapper">
         <header id="header">
-
           <div id="topNavMobile">
             <nav id="mobileMenuLink" class="main-nav clear">
               <ul>
@@ -526,105 +496,63 @@ id="collection-5b92f28d0e2e72baf566193b">
               </ul>
             </nav>
           </div>
-
           <div id="logo" data-content-field="site-title">
-
             <h1 class="logo site-title">
               <a href="/">
-
                   Hello, I'm Shagun
-
               </a>
             </h1>
-
             <div class="logo-subtitle">And this is my story</div>
-
           </div>
-
           <div id="topNav" data-content-field="navigation">
             <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
-
-                <li class="folder-collection folder">
-
+                <li class="folder-collection folder active-folder">
                   <a>UX</a>
                   <div class="subnav">
                     <ul>
-
-                      <li class="page-collection">
-                        <a href="/creativity-project">Creativity Project</a>
-                      </li>
-
-                      <li class="page-collection">
-                        <a href="/expo">Brooklyn Craft Expo</a>
-                      </li>
-
-                      <li class="page-collection">
-                        <a href="/barter-out">Barter Out</a>
-                      </li>
-
+                      <li class="page-collection"> <a href="/ur-eats">UR Eats</a> </li>
+                      <li class="page-collection"> <a href="/blackboard">Blackboard</a> </li>
+                      <li class="page-collection"> <a href="/creativity-project">Creativity Project</a> </li>
+                      <li class="page-collection"> <a href="/expo">Brooklyn Craft Expo</a> </li>
                     </ul>
                   </div>
-
                 </li>
-
-                <li class="folder-collection folder">
-
+                <li class="folder-collection folder active-folder">
                   <a>ART</a>
                   <div class="subnav">
                     <ul>
-
                       <li class="gallery-collection">
                         <a href="/gallery">Gallery</a>
                       </li>
-
                       <li class="page-collection">
                         <a href="/video">Sound & Video</a>
                       </li>
-
                     </ul>
                   </div>
-
                 </li>
-
               </ul>
-
             </nav>
-
             <nav id="secondaryNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
-
                 <li class="page-collection">
-
                   <a href="/about-me">About Me</a>
-
                 </li>
-
                 <li class="page-collection">
-
                   <a href="/resume-1">Resume</a>
-
                 </li>
-
                 <li class="page-collection">
-
                   <a href="/contact">Contact</a>
-
                 </li>
-
               </ul>
-
             </nav>
           </div>
-
           <div class="sqs-layout sqs-grid-1 columns-1 empty" data-layout-label="Header Content" data-type="block-field" id="headerBlocks">
             <div class="row sqs-row">
               <div class="col sqs-col-1 span-1"></div>
             </div>
           </div>
-
           <div id="footerBlocks-2" class="social-links sqs-svg-icon--list" data-content-field="connected-accounts">
-
             <a href="https://twitter.com/BoseShagun" target="_blank" class="sqs-svg-icon--wrapper twitter">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -633,7 +561,6 @@ id="collection-5b92f28d0e2e72baf566193b">
                 </svg>
               </div>
             </a>
-
             <a href="https://github.com/shagunBose" target="_blank" class="sqs-svg-icon--wrapper github">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -642,7 +569,6 @@ id="collection-5b92f28d0e2e72baf566193b">
                 </svg>
               </div>
             </a>
-
             <a href="https://dribbble.com/shagunbose" target="_blank" class="sqs-svg-icon--wrapper dribbble">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -651,7 +577,6 @@ id="collection-5b92f28d0e2e72baf566193b">
                 </svg>
               </div>
             </a>
-
             <a href="http://www.linkedin.com/in/shagunbose" target="_blank" class="sqs-svg-icon--wrapper linkedin">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -660,9 +585,7 @@ id="collection-5b92f28d0e2e72baf566193b">
                 </svg>
               </div>
             </a>
-
           </div>
-
         </header>
       </div>
 
