Thumbnail images work on gallery

--- a/site/gallery/index.html
+++ b/site/gallery/index.html
@@ -493,12 +493,12 @@
               <div id="slideshowWrapper" class="">
                 <div id="slideshow" class="slideshow">
 
-                  <div class="slide video-slide" data-slide-id="5d8d59e73e6a73239ce5f323" data-slide-url="2019/9/26/winner-takes-it-all">
+                  <div class="slide video-slide">
 
-                    <div class="sqs-video-wrapper" data-load="false" data-html="&lt;iframe scrolling=&quot;no&quot; allowfullscreen=&quot;&quot; src=&quot;//www.youtube.com/embed/ycfl_Y1wzr4?wmode=opaque&amp;amp;enablejsapi=1&quot; width=&quot;854&quot; frameborder=&quot;0&quot; height=&quot;480&quot;&gt;&lt;/iframe&gt;" data-provider-name="YouTube">
+                    <div class="sqs-video-wrapper" data-load="false">
+                      <iframe width="560" height="315" src="https://youtu.be/ycfl_Y1wzr4" frameborder="0"></iframe>
                       <div class="sqs-video-overlay" style="opacity: 0;"><img data-load="false" src="image-asset.jpeG" />
-                        <div
-                        class="sqs-video-opaque"> </div>
+                        <div class="sqs-video-opaque"> </div>
                       <div class="sqs-video-icon"></div>
                     </div>
                   </div>
@@ -509,7 +509,7 @@
                 </div>
 
                 <div class="slide" data-slide-id="5d8d4f443e6a73239ce50d8b" data-slide-url="2019/9/26/self-portrait">
-                  <img src="DSCF2297.jpG" />
+                  <img src="DSCF2297.jpg" />
                   <div class="image-title-mobile"><strong>Self Portrait</strong></div>
                   <div class="image-desc-mobile">
                     <p class=""><em>Bic Pen</em> (Spring 2019)</p>
@@ -517,13 +517,13 @@
                 </div>
 
                 <div class="slide" data-slide-id="5d8d507b887b0f07a6711e78" data-slide-url="2019/9/26/a-study-of-negatives-charcoal">
-                  <img src="DSCF2332.JPG" />
+                  <img src="DSCF2332.jpeg" />
                   <div class="image-title-mobile"><strong>A study of negatives (Charcoal)</strong></div>
 
                 </div>
 
                 <div class="slide" data-slide-id="5d8d510c3e6a73239ce53513" data-slide-url="2019/9/26/negatives-charcoal">
-                  <img src="DSCF2311.JPG" />
+                  <img src="DSCF2311.jpeg" />
                   <div class="image-title-mobile"><strong>Negatives (Charcoal)</strong></div>
                   <div class="image-desc-mobile">
                     <p class="">Spring 2019</p>
@@ -531,7 +531,7 @@
                 </div>
 
                 <div class="slide" data-slide-id="5d8d51c9887b0f07a6713afa" data-slide-url="2019/9/26/pencil-case-still-life">
-                  <img src="DSCF2319.JPG" />
+                  <img src="DSCF2319.jpeg" />
                   <div class="image-title-mobile"><strong>Pencil Case (Still Life) </strong></div>
                   <div class="image-desc-mobile">
                     <p class="">Charcoal, Spring 2019</p>
@@ -540,7 +540,7 @@
                 </div>
 
                 <div class="slide" data-slide-id="5c0f4f2b0e2e726dadf3e199" data-slide-url="q3b3j5spl06kni1qgrerwe41b2282p">
-                  <img src="Still+Life+-+At+Home.jpG" />
+                  <img src="Still+Life+-+At+Home.jpg" />
                   <div class="image-title-mobile"><strong>Still Life</strong></div>
                   <div class="image-desc-mobile">
                     <p><em>Water Color (June 2013)</em></p>
@@ -562,7 +562,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f583070a6adbe31af33ba" data-slide-url="2018/12/11/the-little-coochi-snorcher-that-could">
-                <img src="17015963_1237136799715466_7867180436696264925_o.jpG" />
+                <img src="17015963_1237136799715466_7867180436696264925_o.jpg" />
                 <div class="image-title-mobile"><strong>The Little Coochi Snorcher That Could</strong></div>
                 <div class="image-desc-mobile">
                   <p>Performance of <em>The Little Coochi Snorcher That Could</em> for the <em>Vagina Monologues</em>, Feb 2017. </p>
@@ -570,7 +570,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f59044d7a9c54d422b4be" data-slide-url="ro3bm7x94th0hgvtsu7ortm5gpuc8g">
-                <img src="TVM+Poster+FINAL.jpG" />
+                <img src="TVM+Poster+FINAL.jpg" />
                 <div class="image-title-mobile"><strong>Poster for The Vagina Monologues </strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Photoshop (2018)</em></p>
@@ -579,7 +579,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f59b9562fa7e00fa5133b" data-slide-url="hem44q1bre9fsi5gdidmgha0qh4edc">
-                <img src="Real+Woman_5.jpG" />
+                <img src="Real+Woman_5.jpg" />
                 <div class="image-title-mobile"><strong>Stickers for the Vagina Monologues</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Photoshop (2018)</em></p>
@@ -588,7 +588,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f56a56d2a73aee7be59b1" data-slide-url="2018/12/11/low-light-photography">
-                <img src="DSC_0438.JPG" />
+                <img src="DSC_0438.jpeg" />
                 <div class="image-title-mobile"><strong>Low Light Photography</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>2015</em></p>
@@ -596,7 +596,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f57358a922d33f5e4be64" data-slide-url="2018/12/11/low-light-photography-1">
-                <img src="DSC_0469+%282%29.JPG" />
+                <img src="DSC_0469+%282%29.jpeg" />
                 <div class="image-title-mobile"><strong>Low Light Photography</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>2015</em></p>
@@ -604,7 +604,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f577ec2241bc51d2a7bf6" data-slide-url="2018/12/11/low-light-photography-2">
-                <img src="DSC_0409.JPG" />
+                <img src="DSC_0409.jpeg" />
                 <div class="image-title-mobile"><strong>Low Light Photography</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>2015</em></p>
@@ -612,7 +612,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f4f28aa4a99f7e98df8ef" data-slide-url="glocpaew9ezav84tz5lcgsyi7xbbeb">
-                <img src="Rahul.jpG" />
+                <img src="Rahul.jpg" />
                 <div class="image-title-mobile"><strong>Rahul</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Pencil and Charcoal (August 2014)</em></p>
@@ -622,7 +622,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f4f241ae6cfa8b7b5e360" data-slide-url="w29mj25ag3v0elxw84snlyx3dw2lmm">
-                <img src="An+Elephant+Remembers.jpG" />
+                <img src="An+Elephant+Remembers.jpg" />
                 <div class="image-title-mobile"><strong>An Elephant Never Forgets</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Water Color and Blue Ink (Nov 2013)</em></p>
@@ -632,7 +632,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f4f246d2a73aee7be1c10" data-slide-url="4lvejacdxc5i0e58fw3te5aaj1kjo1">
-                <img src="Arundhati.jpG" />
+                <img src="Arundhati.jpg" />
                 <div class="image-title-mobile"><strong>Arundhati</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Pencil, 11” x 13” (2012)</em></p>
@@ -640,7 +640,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f4f282b6a28298fdd06a7" data-slide-url="ssnbvs2froeepg9exo1j6swstxm1ga">
-                <img src="Chains.jpG" />
+                <img src="Chains.jpg" />
                 <div class="image-title-mobile"><strong>Chains</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Pencil and Charcoal 66” x 87” (2014)</em></p>
@@ -649,7 +649,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f550521c67c5097a63c27" data-slide-url="2018/12/11/shoe-puppets">
-                <img src="DSC01183.JPG" />
+                <img src="DSC01183.jpeg" />
                 <div class="image-title-mobile"><strong>Shoe Puppets</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Sculpture (2016)</em></p>
@@ -659,7 +659,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f55b5f950b77ad77a9668" data-slide-url="2018/12/11/shoe-puppets-1">
-                <img src="DSC_0002.JPG" />
+                <img src="DSC_0002.jpeg" />
                 <div class="image-title-mobile"><strong>Shoe Puppets</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Sculpture (2016)</em></p>
@@ -668,7 +668,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f4f2c21c67c5097a60ae9" data-slide-url="512kzcafd6z5lyceghjs23946xcn9d">
-                <img src="Still+Life+-+Sevillle.jpG" />
+                <img src="Still+Life+-+Sevillle.jpg" />
                 <div class="image-title-mobile"><strong>Still Life</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Water Color (Jan 2014)</em></p>
@@ -676,7 +676,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f4f2f0ebbe834a5e79a5a" data-slide-url="ucl2yg5w8717eyg98876s6kvdyw8q4">
-                <img src="Traditions+in+Transition.jpG" />
+                <img src="Traditions+in+Transition.jpg" />
                 <div class="image-title-mobile"><strong>Traditions in Transition</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Acrylic, Water Colour, and Pen, 25” x 11” (Jan 2015)</em></p>
@@ -685,7 +685,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f4e22b8a0457176c3ed78" data-slide-url="2018/12/11/sicily">
-                <img src="Taormina+.jpG" />
+                <img src="Taormina+.jpg" />
                 <div class="image-title-mobile"><strong>Sicily</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Water Color and Pen (2013)</em></p>
@@ -696,7 +696,7 @@
               </div>
 
               <div class="slide" data-slide-id="5c0f561e40ec9ab15f98dc70" data-slide-url="2018/12/11/still-life">
-                <img src="DSC_0028.JPG" />
+                <img src="DSC_0028.jpeg" />
                 <div class="image-title-mobile"><strong>Still Life</strong></div>
                 <div class="image-desc-mobile">
                   <p><em>Water Color (2016)</em></p>
@@ -704,13 +704,10 @@
               </div>
 
             </div>
-            <div class="overlay-controls left-control"></div>
-            <div class="overlay-controls center-control thumbnail-toggle"></div>
-            <div class="overlay-controls right-control"></div>
             <div id="thumbnails">
 
               <div class="thumb" data-slide-id="5d8d59e73e6a73239ce5f323">
-                <img data-src="https://static1.squarespace.com/static/5b928e47f407b4642d668c5d/5c0f4de989858336ab2a0c0c/5d8d59e73e6a73239ce5f323/1569545435182/" data-image="https://static1.squarespace.com/static/5b928e47f407b4642d668c5d/5c0f4de989858336ab2a0c0c/5d8d59e73e6a73239ce5f323/1569545435182/" data-image-dimensions="480x360" data-image-focal-point="0.5,0.5" alt="Winner Takes It All"  data-load="false"/>
+                <img src="image-asset.jpeg" />
               </div>
 
               <div class="thumb" data-slide-id="5d8d4f443e6a73239ce50d8b">
