--- a/site/video/index.html
+++ b/site/video/index.html
@@ -545,136 +545,93 @@ id="collection-5b95bf2870a6adfadf4500ac">
               <div class="row sqs-row">
                 <div class="col sqs-col-12 span-12">
                   <div class="row sqs-row">
+
                     <div class="col sqs-col-6 span-6">
                       <div class="sqs-block image-block sqs-block-image" data-aspect-ratio="57.537688442211056" data-block-type="5" id="block-b91e4e65a18f99b10b9a">
                         <div class="sqs-block-content">
-
                           <div class="image-block-outer-wrapper layout-caption-below design-layout-inline combination-animation-none individual-animation-none individual-text-animation-none">
-
                             <div class="intrinsic" style="max-width:2494.0px;">
-
                               <a href="/under-the-surface">
-
                                 <div style="padding-bottom:57.537689208984375%;" class="image-block-wrapper   has-aspect-ratio" data-animation-tier="1" data-description="&lt;p&gt;&lt;strong&gt;Under The Surface / video&lt;/strong&gt;&lt;/p&gt;">
-                                  <noscript><img src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536542554798-GWQLKT3WVPBIED9GRDLS/ke17ZwdGBToddI8pDm48kDcVOXo1xrTvZWz5QlD23_h7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UZEtqiRBDqfJ9zX-kU4gTad1-Yds5ahDtgxfOLfBpQ2m3WUfc_ZsVm9Mi1E6FasEnQ/Screen+Shot+2018-09-09+at+9.03.57+PM.png"
-                                    alt="Under The Surface / video" /></noscript><img class="thumb-image" data-src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536542554798-GWQLKT3WVPBIED9GRDLS/ke17ZwdGBToddI8pDm48kDcVOXo1xrTvZWz5QlD23_h7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UZEtqiRBDqfJ9zX-kU4gTad1-Yds5ahDtgxfOLfBpQ2m3WUfc_ZsVm9Mi1E6FasEnQ/Screen+Shot+2018-09-09+at+9.03.57+PM.png"
-                                  data-image="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536542554798-GWQLKT3WVPBIED9GRDLS/ke17ZwdGBToddI8pDm48kDcVOXo1xrTvZWz5QlD23_h7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UZEtqiRBDqfJ9zX-kU4gTad1-Yds5ahDtgxfOLfBpQ2m3WUfc_ZsVm9Mi1E6FasEnQ/Screen+Shot+2018-09-09+at+9.03.57+PM.png"
-                                  data-image-dimensions="2494x1390" data-image-focal-point="0.5,0.5" alt="Under The Surface / video" data-load="false" data-image-id="5b95c34588251b7b96987f6a" data-type="image" />
+                                  <img src="Screen+Shot+2018-09-09+at+9.03.57+PM.png" alt="Under The Surface / video" />
                                 </div>
-
                               </a>
-
                               <div class="image-caption-wrapper">
                                 <div class="image-caption">
                                   <p><strong>Under The Surface / video</strong></p>
                                 </div>
                               </div>
-
                             </div>
-
                           </div>
-
                         </div>
                       </div>
                     </div>
+
                     <div class="col sqs-col-6 span-6">
                       <div class="sqs-block image-block sqs-block-image" data-block-type="5" id="block-912511a3ef2ce4d58528">
                         <div class="sqs-block-content">
-
                           <div class="image-block-outer-wrapper layout-caption-below design-layout-inline combination-animation-none individual-animation-none individual-text-animation-none">
-
                             <div class="intrinsic" style="max-width:2489.0px;">
-
                               <a href="/along-those-lines">
-
                                 <div style="padding-bottom:56.24748992919922%;" class="image-block-wrapper   has-aspect-ratio" data-animation-tier="1" data-description="&lt;p&gt;&lt;strong&gt;Along Those Lines / video&lt;/strong&gt;&lt;/p&gt;">
-                                  <noscript><img src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536545431422-6DTX6KF7VSRDIWDOLXLJ/ke17ZwdGBToddI8pDm48kK9CilJhFVU52IMytv987il7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UUpcT7YtNp2uU0yZINDXdiLkrzrxQ5xjfBthYvbIGr9D3WUfc_ZsVm9Mi1E6FasEnQ/Along+Those+Lines.png"
-                                    alt="Along Those Lines / video" /></noscript><img class="thumb-image" data-src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536545431422-6DTX6KF7VSRDIWDOLXLJ/ke17ZwdGBToddI8pDm48kK9CilJhFVU52IMytv987il7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UUpcT7YtNp2uU0yZINDXdiLkrzrxQ5xjfBthYvbIGr9D3WUfc_ZsVm9Mi1E6FasEnQ/Along+Those+Lines.png"
-                                  data-image="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536545431422-6DTX6KF7VSRDIWDOLXLJ/ke17ZwdGBToddI8pDm48kK9CilJhFVU52IMytv987il7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UUpcT7YtNp2uU0yZINDXdiLkrzrxQ5xjfBthYvbIGr9D3WUfc_ZsVm9Mi1E6FasEnQ/Along+Those+Lines.png"
-                                  data-image-dimensions="2489x1400" data-image-focal-point="0.5,0.5" alt="Along Those Lines / video" data-load="false" data-image-id="5b95c67640ec9a30c7535467" data-type="image" />
+                                  <img src="Along+Those+Lines.png" alt="Along Those Lines / video" />
                                 </div>
-
                               </a>
-
                               <div class="image-caption-wrapper">
                                 <div class="image-caption">
                                   <p><strong>Along Those Lines / video</strong></p>
                                 </div>
                               </div>
-
                             </div>
-
                           </div>
-
                         </div>
                       </div>
                     </div>
                   </div>
+
                   <div class="row sqs-row">
                     <div class="col sqs-col-6 span-6">
                       <div class="sqs-block image-block sqs-block-image" data-aspect-ratio="57.03517587939698" data-block-type="5" id="block-yui_3_17_2_1_1536540457449_45280">
                         <div class="sqs-block-content">
-
                           <div class="image-block-outer-wrapper layout-caption-below design-layout-inline combination-animation-none individual-animation-none individual-text-animation-none">
-
                             <div class="intrinsic" style="max-width:2455.0px;">
-
                               <a href="/ana">
-
                                 <div style="padding-bottom:57.03517532348633%;" class="image-block-wrapper   has-aspect-ratio" data-animation-tier="1" data-description="&lt;p&gt;&lt;strong&gt;Ana / video&lt;/strong&gt;&lt;/p&gt;">
-                                  <noscript><img src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536544655741-P921S6U1T0M6NIZ1NLSC/ke17ZwdGBToddI8pDm48kJ5RORyTrJq9rM2iyHf1j9V7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UURaR8pEVwiksOire_8PYFAWhqbpuSarAFqypaNoEqJaMW9u6oXQZQicHHG1WEE6fg/Ana"
-                                    alt="Ana / video" /></noscript><img class="thumb-image" data-src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536544655741-P921S6U1T0M6NIZ1NLSC/ke17ZwdGBToddI8pDm48kJ5RORyTrJq9rM2iyHf1j9V7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UURaR8pEVwiksOire_8PYFAWhqbpuSarAFqypaNoEqJaMW9u6oXQZQicHHG1WEE6fg/Ana"
-                                  data-image="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536544655741-P921S6U1T0M6NIZ1NLSC/ke17ZwdGBToddI8pDm48kJ5RORyTrJq9rM2iyHf1j9V7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UURaR8pEVwiksOire_8PYFAWhqbpuSarAFqypaNoEqJaMW9u6oXQZQicHHG1WEE6fg/Ana"
-                                  data-image-dimensions="2455x1381" data-image-focal-point="0.5,0.5" alt="Ana / video" data-load="false" data-image-id="5b95c4951ae6cf56fbff3123" data-type="image" />
+                                  <img src="Ana.png" alt="Ana / video" />
                                 </div>
-
                               </a>
-
                               <div class="image-caption-wrapper">
                                 <div class="image-caption">
                                   <p><strong>Ana / video</strong></p>
                                 </div>
                               </div>
-
                             </div>
-
                           </div>
-
                         </div>
                       </div>
                     </div>
+
                     <div class="col sqs-col-6 span-6">
                       <div class="sqs-block image-block sqs-block-image" data-aspect-ratio="56.03015075376885" data-block-type="5" id="block-yui_3_17_2_1_1536540457449_76938">
                         <div class="sqs-block-content">
-
                           <div class="image-block-outer-wrapper layout-caption-below design-layout-inline combination-animation-none individual-animation-none individual-text-animation-none">
-
                             <div class="intrinsic" style="max-width:958.0px;">
-
                               <a href="/storm-before-the-calm">
-
                                 <div style="padding-bottom:56.0301513671875%;" class="image-block-wrapper   has-aspect-ratio" data-animation-tier="1" data-description="&lt;p&gt;&lt;strong&gt;Storm Before The Calm / sound&lt;/strong&gt;&lt;/p&gt;">
-                                  <noscript><img src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536544625143-O4CNVJQAX9FPATVSG85I/ke17ZwdGBToddI8pDm48kA3GEgoc_ri95XS23N-patlZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZamWLI2zvYWH8K3-s_4yszcp2ryTI0HqTOaaUohrI8PIq7kKKTeFQ8b8HclMmYAuBF6qR5Ko1EtEpswQOSO3_A4KMshLAGzx4R3EDFOm1kBS/Storm+Before+The+Calm"
-                                    alt="Storm Before The Calm / sound" /></noscript><img class="thumb-image" data-src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536544625143-O4CNVJQAX9FPATVSG85I/ke17ZwdGBToddI8pDm48kA3GEgoc_ri95XS23N-patlZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZamWLI2zvYWH8K3-s_4yszcp2ryTI0HqTOaaUohrI8PIq7kKKTeFQ8b8HclMmYAuBF6qR5Ko1EtEpswQOSO3_A4KMshLAGzx4R3EDFOm1kBS/Storm+Before+The+Calm"
-                                  data-image="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536544625143-O4CNVJQAX9FPATVSG85I/ke17ZwdGBToddI8pDm48kA3GEgoc_ri95XS23N-patlZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZamWLI2zvYWH8K3-s_4yszcp2ryTI0HqTOaaUohrI8PIq7kKKTeFQ8b8HclMmYAuBF6qR5Ko1EtEpswQOSO3_A4KMshLAGzx4R3EDFOm1kBS/Storm+Before+The+Calm"
-                                  data-image-dimensions="958x539" data-image-focal-point="0.5,0.5" alt="Storm Before The Calm / sound" data-load="false" data-image-id="5b95c857cd83660363e5b38b" data-type="image" />
+                                  <img src="Storm+Before+The+Calm.jpeg" alt="Storm Before The Calm / sound" />
                                 </div>
-
                               </a>
-
                               <div class="image-caption-wrapper">
                                 <div class="image-caption">
                                   <p><strong>Storm Before The Calm / sound</strong></p>
                                 </div>
                               </div>
-
                             </div>
-
                           </div>
-
                         </div>
                       </div>
                     </div>
+
                   </div>
                 </div>
               </div>
@@ -687,17 +644,6 @@ id="collection-5b95bf2870a6adfadf4500ac">
     </div>
   </div>
 
-  <script type="text/javascript" src="https://static1.squarespace.com/static/ta/4f9adbe124ac5df956fdf900/860/scripts/combo/?site.js"></script>
-  <script type="text/javascript" data-sqs-type="imageloader-bootstrapper">
-    (function() {
-      if (window.ImageLoader) {
-        window.ImageLoader.bootstrap({}, document);
-      }
-    })();
-  </script>
-  <script>
-    Squarespace.afterBodyLoad(Y);
-  </script>
   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="display:none" data-usage="social-icons-svg">
     <symbol id="linkedin-icon" viewBox="0 0 64 64">
       <path d="M20.4,44h5.4V26.6h-5.4V44z M23.1,18c-1.7,0-3.1,1.4-3.1,3.1c0,1.7,1.4,3.1,3.1,3.1 c1.7,0,3.1-1.4,3.1-3.1C26.2,19.4,24.8,18,23.1,18z M39.5,26.2c-2.6,0-4.4,1.4-5.1,2.8h-0.1v-2.4h-5.2V44h5.4v-8.6 c0-2.3,0.4-4.5,3.2-4.5c2.8,0,2.8,2.6,2.8,4.6V44H46v-9.5C46,29.8,45,26.2,39.5,26.2z"
